build basic components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,4 +7,7 @@
 </div>
 <h2>Here are some links to help you start: </h2>
 <h1>Some text!: Hello Quang</h1>
+<!-- <app-cart [items]="rootItems" (itemAdded)="onAdding($event)"></app-cart> -->
+<app-user [name]="rootName" (nameChanged)="onNameChanged($event)"></app-user>
+<!-- <app-dashboard></app-dashboard> -->
 
