structural directives and un-structural directive

--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,3 +1,21 @@
-<p>{{items}}</p>
+
 <input type="text" [(ngModel)]="newItem" />
-<button (click)="onAddItem()">Add Item</button>
+<button
+  (click)="onAddItem()"
+  class="btn"
+  [ngClass]="{'btn-primary': newItem !== '', 'btn-default': newItem === ''}"
+  >Add Item
+</button>
+
+<p *ngIf="newItem === ''">Please enter a value!</p>
+<hr>
+
+<ul class="list-group">
+  <li
+    class="list-group-item"
+    *ngFor="let item of items; let i = index"
+    [ngStyle]="{backgroundColor: i % 2 === 0 ? 'yellow' : 'blue', 'font-weight': '400'}"
+  >
+      {{item}}
+  </li>
+</ul>
